// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get-static-file-root should get root-level static files and folders with default pagination 1`] = `
{
  "content": [
    {
      "text": "{"total":2,"items":[{"name":"App_Plugins","path":"/App_Plugins","parent":{"path":"/","id":"00000000-0000-0000-0000-000000000000"},"isFolder":true,"hasChildren":false,"id":"00000000-0000-0000-0000-000000000000"},{"name":"wwwroot","path":"/wwwroot","parent":{"path":"/","id":"00000000-0000-0000-0000-000000000000"},"isFolder":true,"hasChildren":true,"id":"00000000-0000-0000-0000-000000000000"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-static-file-root should handle large skip value gracefully 1`] = `
{
  "content": [
    {
      "text": "{"total":2,"items":[]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-static-file-root should handle pagination with skip parameter 1`] = `
{
  "content": [
    {
      "text": "{"total":2,"items":[{"name":"wwwroot","path":"/wwwroot","parent":{"path":"/","id":"00000000-0000-0000-0000-000000000000"},"isFolder":true,"hasChildren":true,"id":"00000000-0000-0000-0000-000000000000"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-static-file-root should handle pagination with small take parameter 1`] = `
{
  "content": [
    {
      "text": "{"total":2,"items":[{"name":"App_Plugins","path":"/App_Plugins","parent":{"path":"/","id":"00000000-0000-0000-0000-000000000000"},"isFolder":true,"hasChildren":false,"id":"00000000-0000-0000-0000-000000000000"},{"name":"wwwroot","path":"/wwwroot","parent":{"path":"/","id":"00000000-0000-0000-0000-000000000000"},"isFolder":true,"hasChildren":true,"id":"00000000-0000-0000-0000-000000000000"}]}",
      "type": "text",
    },
  ],
}
`;

exports[`get-static-file-root should handle zero take parameter 1`] = `
{
  "content": [
    {
      "text": "{"total":2,"items":[]}",
      "type": "text",
    },
  ],
}
`;
